# IZ-AiSD

./: .gitignore  1(bit_shift).cpp  2(Array_algorithms).cpp  main.cpp
BTree/: BTree.cpp  BTree.h  CMakeLists.txt  main.cpp
IZ1/: 4(Heap).cpp  6(FindKstat).cpp  7(LSD sort).cpp
IZ2/: AVLTree((+find KStat).cpp  AVLTree.cpp  Binary Tree(not recursive).cpp  Hash_table(doesnt work).cpp  Hash_table.cpp
IZ3/: .gitignore  CMakeLists.txt  main.cpp
IZ3/1(Types of Graphs)/: main.cpp
IZ3/1(Types of Graphs)/ArcGraph/: ArcGraph.h
IZ3/1(Types of Graphs)/IGraph/: CMakeLists.txt  IGraph.h
IZ3/1(Types of Graphs)/ListGraph/: ListGraph.cpp  ListGraph.h
IZ3/1(Types of Graphs)/MatrixGraph/: CMakeLists.txt  MatrixGraph.h
IZ3/1(Types of Graphs)/SetGraph/: SetGraph.cpp  SetGraph.h
IZ3/2(Current of shortest paths)/: 2(Shortest Path).cpp  CMakeLists.txt
IZ3/3(Minimal distance)/: 3.cpp  CMakeLists.txt
IZ3/5(voyageur+Kruskal)/: 5.cpp  CMakeLists.txt
IZ3/ArcGraph/: ArcGraph.cpp  ArcGraph.h  CMakeLists.txt
IZ3/IGraph/: IGraph.h
IZ3/ListGraph/: CMakeLists.txt  ListGraph.cpp  ListGraph.h
IZ3/MatrixGraph/: CMakeLists.txt  MatrixGraph.cpp  MatrixGraph.h
IZ3/SetGraph/: CMakeLists.txt  SetGraph.cpp  SetGraph.h
RedBlackTree/: CMakeLists.txt  RedBlackTree.cpp  RedBlackTree.h  main.cpp
