cmake_minimum_required(VERSION 3.22)
project(Graphs)

set(CMAKE_CXX_STANDARD 14)
add_subdirectory(ArcGraph)
add_subdirectory(ListGraph)
add_subdirectory(MatrixGraph)
add_subdirectory(SetGraph)
add_subdirectory(IGraph)
add_executable(Graphs main.cpp)
target_link_libraries(Graphs INTERFACE IGraph)
target_link_libraries(Graphs PUBLIC ArcGraph ListGraph MatrixGraph SetGraph)
